# My-Awesome-Dream-CN

./: AGENTS.md  CLAUDE.md  Claude Code Setup Plan.md  Project Develop Plan.md  README.md  config.yaml  pyproject.toml  skills-lock.json  未命名.md
.archive/: README.md
.claude/: settings.json
.claudian/: claudian-settings.json
release/my-awesome-dream-2026-07-22/: .gitignore  CLAUDE.md  Project Develop Plan.md  README.md  config.yaml  pyproject.toml  skills-lock.json
release/my-awesome-dream-2026-07-22/.claude/: settings.json
release/my-awesome-dream-2026-07-22/.claude/skills/init/: SKILL.md
release/my-awesome-dream-2026-07-22/.claude/skills/rednote-skill/: SKILL.md
release/my-awesome-dream-2026-07-22/.claude/skills/wechat-article-search/: SKILL.md
release/my-awesome-dream-2026-07-22/.claude/skills/zhihu-fetch/: SKILL.md
release/my-awesome-dream-2026-07-22/.obsidian/: appearance.json  community-plugins.json
release/my-awesome-dream-2026-07-22/.raw/: README.md
release/my-awesome-dream-2026-07-22/_templates/: concept.md  entity.md  question.md  source.md
release/my-awesome-dream-2026-07-22/scripts/: fetch_official_page.py  full_collect.py  hook_fetch.py
release/my-awesome-dream-2026-07-22/wiki/concepts/: _index.md  夏令营.md  本校推免规则.md
release/my-awesome-dream-2026-07-22/wiki/meta/: dashboard.md
release/my-awesome-dream-2026-07-22/wiki/profile/: _index.md
release/my-awesome-dream-2026-07-22/wiki/requirements/: _index.md
release/my-awesome-dream-2026-07-22/wiki/sources/: README.md
release/my-awesome-dream-2026-07-22/wiki/targets/: _index.md
(+35 files in other folders)
