[project]
name = "my-awesome-dream"
version = "0.1.0"
description = "保研决策支持知识库 - LLM Wiki"
requires-python = ">=3.12"
dependencies = [
    # zhihu-fetch dependencies
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
    # rednote-skill dependencies
    "typer>=0.9",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "pycryptodomex>=3.20",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "qrcode>=7.4",
    "rich>=13.0",
    # rednote-skill itself (editable from local path)
    "rednote",
    # sufe-cli
    "sufe-cli",
]

[tool.uv.sources]
rednote = { path = ".claude/skills/rednote-skill", editable = true }
sufe-cli = { path = ".claude/skills/sufe-cli", editable = true }

[dependency-groups]
dev = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
